--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -726,7 +726,7 @@ Engagement Pics
 Embed video
 ========================================================================== */
 #video-bg {
-  height: 300px;
+  height: 700px;
 }
 #video-content {
   width: 100%;
@@ -859,7 +859,7 @@ RSVP form
         left: 30px;
         transform: translateY(-50%);
       }
-      i.fa-user, i.fa-users, i.fa-envelope, .fa-key {
+      i.fa-user, i.fa-users, i.fa-envelope, .fa-key, .fa-bus {
         font-size: 14px;
         position: absolute;
         top: 50%;
